--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 				<p>Eres una gran persona Jaret</p>
 				<p>Espero acompañarte en muchos cumpleaños más</p>
 				<p>Felices 26</p>
-				<p>Que tengas un bonito día,</p>
+				<p>Que tengas bonito día,</p>
+				<p>y que tus deseos se hagan realidad,</p>
 				<p>TE AMOOOOOO</p>
 			</div>
 		</div>
